--- a/webshow.cabal
+++ b/webshow.cabal
@@ -1,7 +1,7 @@
 name:                webshow
 version:             0.0.0
 synopsis:            Show programming language printed values in a web UI
-description:         Show programming language printed values in a web UI
+description:         Show programming language printed values in a web UI. Supports Haskell Show values only at the moment.
 homepage:            https://github.com/chrisdone/webshow#readme
 license:             BSD3
 license-file:        LICENSE
@@ -17,7 +17,7 @@ executable webshow
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
+  build-depends:       base >=4.7 && <5
                      , warp
                      , wai
                      , http-types
