--- a/webshow.cabal
+++ b/webshow.cabal
@@ -30,6 +30,7 @@ executable webshow
                      , filepath
                      , text
                      , file-embed
+                     , mtl
   default-language:    Haskell2010
 
 source-repository head
